:rocket: naive authors loading command

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 Django==1.11.2
 django-debug-toolbar==1.8
+Faker==0.7.17
 psycopg2==2.7.1
+python-dateutil==2.6.0
 pytz==2017.2
+six==1.10.0
 sqlparse==0.2.3
